springboot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app
  labels:
    app: springboot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot
  template:
    metadata:
      labels:
        app: springboot
    spec:
      containers:
      - name: springboot
        image: henribufii/jenkins
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
spec:
  selector:
    app: springboot
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  type: ClusterIP


### per pjesen e secret esht perdorur komanda kubectl create secret docker-registry <name> --docker-server=<server name>   --docker-username=<username>   --docker-password=<password>   --docker-email=<email>
